<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HomeActivity">

    <Button
        android:id="@+id/addPubBt"
        style="@style/MainButtonStyle"
        android:layout_marginTop="120dp"
        android:text="@string/add_pub" />

    <Button
        android:id="@+id/browsePubsBt"
        style="@style/MainButtonStyle"
        android:layout_marginTop="16dp"
        android:text="@string/homepage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>