<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AddPubActivity"
    tools:showIn="@layout/activity_add_pub">

    <EditText
        android:id="@+id/pubTitleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pubDescriptionEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@id/pubTitleEt"
        app:layout_constraintStart_toStartOf="@id/pubTitleEt"
        app:layout_constraintTop_toBottomOf="@id/pubTitleEt" />

    <Button
        android:id="@+id/submitPubBt"
        style="@style/MainButtonStyle"
        android:layout_marginTop="30dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@id/pubDescriptionEt"
        app:layout_constraintStart_toStartOf="@id/pubDescriptionEt"
        app:layout_constraintTop_toBottomOf="@id/pubDescriptionEt" />

</androidx.constraintlayout.widget.ConstraintLayout>