<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/itemPubTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        tools:text="Lorem Ipsum" />

    <TextView
        android:id="@+id/itemPubDescriptionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        tools:text="elo" />

    <TextView
        android:id="@+id/itemPubAuthorTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:text="bchaber" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/linked_files"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/colorAccent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemPubPdfsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="1"
        tools:listitem="@layout/item_pdf" />

    <EditText
        android:id="@+id/itemPubFilenameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/itemPubLinkBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/link_file"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/itemPubUnlinkBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/unlink_file"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/itemPubDeleteBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/delete_publication"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>